# niff-Stellar-shurance

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  EVENT_DICTIONARY.md  Makefile  README.md
.github/workflows/: ci.yml  load-tests.yml
backend/: .env.example  DATABASE.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/docs/: grafana-dashboard.json  observability.md  prometheus-alerts.yml  rate-limiting.md  tenant-isolation.md
backend/loadtests/: README.md  claim-submit.js  claims-list.js  (+2 more)
contracts/niffyinsure/: Cargo.toml  README.md  TODO.md
contracts/niffyinsure/docs/: SWEEP_LEGAL_COMPLIANCE.md  SWEEP_RUNBOOK.md
contracts/niffyinsure/quarantine/: events_integration_stale.rs
contracts/niffyinsure/src/: admin.rs  claim.rs  events.rs  governance_token.rs  ledger.rs  lib.rs  policy.rs  premium.rs  storage.rs  token.rs  types.rs  validate.rs
contracts/niffyinsure/test_snapshots/: duplicate_vote_is_rejected.1.json  full_claim_vote_flow_approve.1.json  full_claim_vote_flow_reject.1.json  initialize_stores_admin_and_token.1.json  non_voter_cannot_vote.1.json  set_and_get_claim_round_trip.1.json
contracts/niffyinsure/tests/: emergency_sweep.rs  events.rs  governance_token_feature.rs  integration.rs  multi_asset.rs  premium.rs  quote.rs  storage.rs  types_validate.rs  voting_duration_config.rs
docs/: claim-notification-latency.md
frontend/: .env.example  .eslintrc.json  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
scripts/: refresh-vectors.ts
(+208 files in other folders)
